# openmul

./: Makefile.am  configure.ac  mul.sh
application/l2switch/: l2switch.c
application/memtrack/: Makefile.am  memtrack.c
common-libs/mul-lib/include/: mul_app_interface.h
mul/: mul_main.c  mul_of.c
